fixed overflow on progress bar

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ body {
   justify-content: space-between;
   position: relative;
   margin-bottom: 30px;
-  max-width: 100%;
+  max-width: 99%;
   width: 350px;
 }
 
